# ai-wiki-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ai-wiki/: constraints.md  decisions.md  index.md  workflows.md
docs/: ai-wiki-usefulness-metrics-v2.md  doctor-proposal.md  homebrew-tap.md  npm-publish.md  npm-wrapper.md  releasing.md  team-coding-bench.md  usage.md
npm/: install.js  platform-targets.json  shared.js
scripts/: build_linux_release_in_container.py  build_release_archive.py  check_linux_runtime_matrix.py  check_release_version.py  pr_flow.py  render_homebrew_formula.py  stage_npm_platform_packages.py  sync_homebrew_tap.py
tests/: conftest.py  helpers.py  test_agent_harness.py  test_cli_version.py  test_compatibility_scenarios.py  test_consolidation.py  test_diagnostics.py  test_distribution_metadata.py  test_doctor.py  test_eval_product.py  test_eval_release_smoke.py  test_feedback.py  test_homebrew_formula.py  test_homebrew_tap.py  test_impact_eval_run_capture.py  test_impact_eval_setup.py  test_init_scenarios.py  test_install_uninstall_scenarios.py  test_local_identity.py  test_npm_wrapper.py  test_opencode.py  test_path_helpers.py  test_pr_flow_script.py  test_promotion.py  test_prompt_scenarios.py  test_release_artifacts.py  test_release_build.py  test_release_runtime.py  test_release_smoke_workflow.py  test_release_version.py  test_repo_evaluation.py  test_reuse_events.py  test_review_pattern_scenarios.py  test_route.py  test_route_traces.py  (+9 more)
(+381 files in other folders)
