[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-wiki-toolkit"
version = "0.1.7"
description = "Minimal scaffold for repo-local and home-level AI wiki prompts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
]

[project.urls]
Homepage = "https://github.com/BochengYin/ai-wiki-toolkit"
Repository = "https://github.com/BochengYin/ai-wiki-toolkit.git"
Issues = "https://github.com/BochengYin/ai-wiki-toolkit/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
release = [
  "pyinstaller>=6.0,<7.0",
]

[project.scripts]
aiwiki-toolkit = "ai_wiki_toolkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_wiki_toolkit"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
